@@ -1,7 +1,5 @@
 package org.popcraft.chunky.iterator;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public final class PatternType {
@@ -10,7 +8,7 @@ public final class PatternType {
     public static final String SPIRAL = "spiral";
     public static final String CSV = "csv";
 
-    public static final List<String> ALL = Collections.unmodifiableList(Arrays.asList(CONCENTRIC, LOOP, SPIRAL, CSV));
+    public static final List<String> ALL = List.of(CONCENTRIC, LOOP, SPIRAL, CSV);
 
     private PatternType() {
     }
